add_custom_command(OUTPUT TComptonTelescopePhysicsDict.cxx TComptonTelescopePhysicsDict_rdict.pcm TComptonTelescopePhysics.rootmap COMMAND genreflex TComptonTelescopePhysics.h -o TComptonTelescopePhysicsDict.cxx -I../Core --rootmap=TComptonTelescopePhysics.rootmap --rootmap-lib=libNPComptonTelescope --quiet DEPENDS TComptonTelescopePhysics.h)
add_custom_command(OUTPUT TComptonTelescopeProcessDataDict.cxx TComptonTelescopeProcessDataDict_rdict.pcm TComptonTelescopeProcessData.rootmap COMMAND genreflex TComptonTelescopeProcessData.h -o TComptonTelescopeProcessDataDict.cxx -I../Core --rootmap=TComptonTelescopeProcessData.rootmap --rootmap-lib=libNPComptonTelescope --quiet DEPENDS TComptonTelescopeProcessData.h)
add_custom_command(OUTPUT TComptonTelescopeDataDict.cxx TComptonTelescopeDataDict_rdict.pcm TComptonTelescopeData.rootmap COMMAND genreflex TComptonTelescopeData.h -o TComptonTelescopeDataDict.cxx -I../Core --rootmap=TComptonTelescopeData.rootmap --rootmap-lib=libNPComptonTelescope --quiet DEPENDS TComptonTelescopeData.h)
add_library(NPComptonTelescope SHARED TComptonTelescopeData.cxx TComptonTelescopePhysics.cxx TComptonTelescopeDataDict.cxx TComptonTelescopePhysicsDict.cxx TComptonTelescopeSpectra.cxx TComptonTelescopeProcessData.cxx TComptonTelescopeProcessDataDict.cxx)
target_link_libraries(NPComptonTelescope ${ROOT_LIBRARIES} NPCore) 
install(FILES TComptonTelescopeProcessData.h TComptonTelescopeData.h TComptonTelescopePhysics.h TComptonTelescopeSpectra.h DESTINATION ${CMAKE_INCLUDE_OUTPUT_DIRECTORY})
install(FILES TComptonTelescopeData.rootmap DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TComptonTelescopeProcessData.rootmap DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TComptonTelescopePhysics.rootmap DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TComptonTelescopeDataDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TComptonTelescopeProcessDataDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TComptonTelescopePhysicsDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
