add_custom_command(OUTPUT TExogamPhysicsDict.cxx TExogamPhysicsDict_rdict.pcm TExogamPhysics.rootmap COMMAND rootcint -f TExogamPhysicsDict.cxx -rmf TExogamPhysics.rootmap -rml libNPExogam.dylib -I../Core -c TExogamPhysics.h DEPENDS TExogamPhysics.h)
add_custom_command(OUTPUT TExogamDataDict.cxx TExogamDataDict_rdict.pcm TExogamData.rootmap COMMAND rootcint -f TExogamDataDict.cxx -rmf TExogamData.rootmap -rml libNPExogam.dylib -I../Core -c TExogamData.h DEPENDS TExogamData.h)
add_library(NPExogam SHARED TExogamData.cxx TExogamPhysics.cxx TExogamDataDict.cxx TExogamPhysicsDict.cxx TExogamSpectra.cxx)
target_link_libraries(NPExogam ${ROOT_LIBRARIES} NPCore) 
install(FILES TExogamData.h TExogamPhysics.h TExogamSpectra.h DESTINATION ${CMAKE_INCLUDE_OUTPUT_DIRECTORY})

install(FILES TExogamData.rootmap DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TExogamPhysics.rootmap DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TExogamDataDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TExogamPhysicsDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TExogamDataDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TExogamPhysicsDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
