add_custom_command(OUTPUT TFatimaPhysicsDict.cxx TFatimaPhysicsDict_rdict.pcm TFatimaPhysics.rootmap COMMAND rootcint -f TFatimaPhysicsDict.cxx -rmf TFatimaPhysics.rootmap -rml libNPFatima.dylib -I../Core -c TFatimaPhysics.h DEPENDS TFatimaPhysics.h)
add_custom_command(OUTPUT TFatimaDataDict.cxx TFatimaDataDict_rdict.pcm TFatimaData.rootmap COMMAND rootcint -f TFatimaDataDict.cxx -rmf TFatimaData.rootmap -rml libNPFatima.dylib -I../Core -c TFatimaData.h DEPENDS TFatimaData.h)
add_library(NPFatima SHARED TFatimaData.cxx TFatimaPhysics.cxx TFatimaDataDict.cxx TFatimaPhysicsDict.cxx )
target_link_libraries(NPFatima ${ROOT_LIBRARIES} NPCore) 
install(FILES TFatimaData.h TFatimaPhysics.h DESTINATION ${CMAKE_INCLUDE_OUTPUT_DIRECTORY})

install(FILES TFatimaData.rootmap DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TFatimaPhysics.rootmap DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TFatimaDataDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TFatimaPhysicsDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TFatimaDataDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TFatimaPhysicsDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
