add_custom_command(OUTPUT TGaspardTrackerPhysicsDict.cxx TGaspardTrackerPhysicsDict_rdict.pcm TGaspardTrackerPhysics.rootmap COMMAND rootcint -f TGaspardTrackerPhysicsDict.cxx -rmf TGaspardTrackerPhysics.rootmap -rml libNPGASPARD.dylib -I../Core -c TGaspardTrackerPhysics.h DEPENDS TGaspardTrackerPhysics.h)
add_custom_command(OUTPUT TGaspardTrackerDataDict.cxx TGaspardTrackerDataDict_rdict.pcm TGaspardTrackerData.rootmap COMMAND rootcint -f TGaspardTrackerDataDict.cxx -rmf TGaspardTrackerData.rootmap -rml libNPGASPARD.dylib -I../Core -c TGaspardTrackerData.h DEPENDS TGaspardTrackerData.h)
add_library(NPGASPARD SHARED GaspardTracker.cxx GaspardTrackerAnnular.cxx GaspardTrackerDummyShape.cxx GaspardTrackerModule.cxx GaspardTrackerTrapezoid.cxx GaspardTrackerSquare.cxx GaspardTrackerRectangle.cxx TGaspardTrackerData.cxx TGaspardTrackerPhysics.cxx TGaspardTrackerDataDict.cxx TGaspardTrackerPhysicsDict.cxx )
target_link_libraries(NPGASPARD ${ROOT_LIBRARIES} NPCore) 
install(FILES TGaspardTrackerData.h TGaspardTrackerPhysics.h GaspardTracker.h GaspardTrackerAnnular.h GaspardTrackerDummyShape.h GaspardTrackerModule.h GaspardTrackerRectangle.h GaspardTrackerSquare.h GaspardTrackerTrapezoid.h DESTINATION ${CMAKE_INCLUDE_OUTPUT_DIRECTORY})

install(FILES TGaspardTrackerData.rootmap DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TGaspardTrackerPhysics.rootmap DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TGaspardTrackerDataDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TGaspardTrackerPhysicsDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TGaspardTrackerDataDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TGaspardTrackerPhysicsDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
