add_custom_command(OUTPUT THeliosPhysicsDict.cxx THeliosPhysicsDict_rdict.pcm THeliosPhysics.rootmap COMMAND rootcint -f THeliosPhysicsDict.cxx -rmf THeliosPhysics.rootmap -rml libNPHelios.dylib -I../Core -c THeliosPhysics.h DEPENDS THeliosPhysics.h)
add_custom_command(OUTPUT THeliosDataDict.cxx THeliosDataDict_rdict.pcm THeliosData.rootmap COMMAND rootcint -f THeliosDataDict.cxx -rmf THeliosData.rootmap -rml libNPHelios.dylib -I../Core -c THeliosData.h DEPENDS THeliosData.h)
add_library(NPHelios SHARED Helios.cxx THeliosData.cxx THeliosPhysics.cxx THeliosDataDict.cxx THeliosPhysicsDict.cxx )
target_link_libraries(NPHelios ${ROOT_LIBRARIES} NPCore) 
install(FILES THeliosData.h THeliosPhysics.h Helios.h DESTINATION ${CMAKE_INCLUDE_OUTPUT_DIRECTORY})

install(FILES THeliosData.rootmap DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES THeliosPhysics.rootmap DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES THeliosDataDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES THeliosPhysicsDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES THeliosDataDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES THeliosPhysicsDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
