add_custom_command(OUTPUT TLaBr3PhysicsDict.cxx TLaBr3PhysicsDict_rdict.pcm TLaBr3Physics.rootmap COMMAND rootcint -f TLaBr3PhysicsDict.cxx -rmf TLaBr3Physics.rootmap -rml libNPLaBr3.dylib -I../Core -c TLaBr3Physics.h DEPENDS TLaBr3Physics.h)
add_custom_command(OUTPUT TLaBr3DataDict.cxx TLaBr3DataDict_rdict.pcm TLaBr3Data.rootmap COMMAND rootcint -f TLaBr3DataDict.cxx -rmf TLaBr3Data.rootmap -rml libNPLaBr3.dylib -I../Core -c TLaBr3Data.h DEPENDS TLaBr3Data.h)
add_library(NPLaBr3 SHARED TLaBr3Data.cxx TLaBr3Physics.cxx TLaBr3DataDict.cxx TLaBr3PhysicsDict.cxx TLaBr3Spectra.cxx)
target_link_libraries(NPLaBr3 ${ROOT_LIBRARIES} NPCore) 
install(FILES TLaBr3Data.h TLaBr3Physics.h TLaBr3Spectra.h DESTINATION ${CMAKE_INCLUDE_OUTPUT_DIRECTORY})

install(FILES TLaBr3Data.rootmap DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TLaBr3Physics.rootmap DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TLaBr3DataDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TLaBr3PhysicsDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TLaBr3DataDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TLaBr3PhysicsDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
